<resources>
    <string name="app_name">베리버킷</string>


    <!-- Common -->
    <string name="cancel">취소</string>
    <string name="apply">적용</string>
    <string name="proceedingText">진행중</string>
    <string name="succeedText">완료</string>
    <string name="blank"> </string>
    <string name="hide">숨기기</string>
    <string name="report">신고</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="countChange">완료횟수변경</string>
    <string name="selected">선택 버튼</string>
    <string name="copy">버킷리스트 복사 버튼</string>
    <string name="back">뒤로가기</string>
    <string name="closeDesc">닫기</string>
    <string name="moreButtonDesc">더보기 버튼</string>
    <string name="nextButtonDesc">다음 버튼</string>
    <string name="deleteButtonDesc">삭제 버튼</string>
    <string name="addDesc">추가</string>

    <!--타이틀 디스크립션-->
    <string name="my">마이</string>
    <string name="feed">피드</string>
    <string name="search">검섹</string>
    <string name="appMore">더보기</string>
    <string name="write">버킷리스트 추가</string>
    <string name="titleLeftDesc">뒤로가기</string>

    <!-- My -->
    <string name="alarm">알람</string>
    <string name="more">더보기</string>
    <string name="followerText">팔로워</string>
    <string name="followingText">팔로잉</string>

    <!-- My > TabTitle -->
    <string name="allTab">전체</string>
    <string name="categoryTab">카테고리</string>
    <string name="ddayTab">디데이</string>
    <string name="challengeTab">챌린지</string>

    <!-- My > All -->
    <string name="allSearchImageViewDesc">전체 버킷리스트 검색</string>
    <string name="allFilterImageViewDesc">전체 버킷리스트 필터</string>

    <!-- My > All > Filter -->
    <string name="showBucketList">표시할 버킷리스트</string>
    <string name="proceedingBucketList">진행중인 버킷리스트</string>
    <string name="succeedBucketList">완료된 버킷리스트</string>
    <string name="sortStandard">정렬 기준</string>
    <string name="sortByUpdate">업데이트 순</string>
    <string name="sortByCreate">등록 순</string>
    <string name="showContent">표시 항목</string>
    <string name="showDday">디데이</string>

    <!-- My > Dday > Filter -->
    <string name="dDayPreBucketList">디데이가 지나지 않은 버킷리스트</string>
    <string name="dDayGoneBucketList">디데이가 지난 버킷리스트</string>

    <!-- My > Category -->
    <string name="recommendCategory">추천 카테고리</string>
    <string name="recommendTag">#</string>
    <string name="categoryEdit">편집</string>
    <string name="categoryAdd">카테고리 추가하기</string>
    <string name="categorySearchImageViewDesc">카테고리 검색</string>

    <!-- My > Dday -->
    <string name="ddayComment">지난 Dday가 1개 있어요</string>
    <string name="ddaySearchImageViewDesc">디데이 버킷리스트 검색</string>
    <string name="ddayFilterImageViewDesc">디데이 버킷리스트 필터</string>

    <!-- My > Dday > Filter -->
    <string name="dday">디데이가 지나지 않은 버킷리스트</string>
    <string name="noDdayBucketList">디데이가 지나지 않은 버킷리스트</string>
    <string name="ddayPastBucketList">디데이가 지난 버킷리스트</string>

    <!-- My > Search -->
    <string name="myBucketSearchHint">리스트를 검색하세요</string>

    <!-- Feed > Recommend -->
    <string name="feedRecommendTitle">관심있는 키워드를\n선택해주세요.</string>
    <string name="feedRecommendSmallTitle">관심 키워드 선택</string>
    <string name="recommendBucketList">버킷 추천받기</string>
    <string name="keywordRefresh">키워드 새로고침</string>

    <!-- Feed > Content -->
    <string name="feedContentTitle">마이 피드</string>
    <string name="feedImageView">피드 이미지</string>
    <string name="feedProfileImage">프로필 이미지</string>

    <!-- Detail -->
    <string name="successButtonText">달성 완료</string>
    <string name="likeButtonDesc">좋아요 버튼</string>
    <string name="commentSendButtonDesc">댓글 전송 버튼</string>
    <string name="commentHintText">버킷리스트를 응원해주세요!</string>
    <string name="commentBlankText">버킷리스트의 첫 응원을 해주세요!</string>
    <string name="successButtonCount"><![CDATA[<font color="#ffffff">%s</font><font color="#a6c6ff">/%s</font>]]></string>

    <!-- Detail > Comment Option Dialog -->
    <string name="commentOptionDialogTitle">댓글</string>
    <string name="commentEdit">수정</string>
    <string name="commentDelete">삭제</string>
    <string name="commentHide">숨기기</string>
    <string name="commentReport">신고</string>

    <!-- Report -->
    <string name="commentReportTitle">댓글 신고</string>
    <string name="reportWriter">작성자</string>
    <string name="reportContents">내용</string>
    <string name="reportItemButton">신고버튼</string>
    <string name="reportActionButton">신고하기</string>
    <string name="reportEtc">기타</string>
    <string name="reportTextFieldHint">신고 사유를 입력해주세요. (최대 500자) </string>

    <!-- Search -->
    <string name="searchTitle">검색</string>
    <string name="searchHint">검색어를 입력해주세요.</string>
    <string name="recentSearch">최근 검색어</string>
    <string name="recommendSearch">추천 키워드</string>
    <string name="showMore">더보기</string>

    <!-- Write -->
    <string name="writeGoToNext">다음</string>
    <string name="writeGoToFinish">완료</string>
    <string name="writeTitleHintText">새로운 목표를 작성해보세요.</string>
    <string name="writeMemoHintText">메모를 작성해주세요.</string>
    <string name="addMemoDesc">메모 추가하기</string>
    <string name="addImageDesc">이미지 추가하기</string>
    <string name="addCategoryDesc">카테고리 추가하기</string>
    <string name="addDdayDesc">디데이 추가하기</string>
    <string name="addGoalDesc">달성횟수 추가하기</string>
    <string name="writeSelectKeyWordGuide">키워드는 3개까지 선택 가능합니다.</string>
    <string name="showSelectedAllFriends">전체보기</string>
</resources>