<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="28dp"
            android:paddingTop="32dp"
            android:paddingEnd="28dp">

            <TextView
                style="@style/FilterTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showBucketList" />

            <com.zinc.berrybucket.customUi.TextAndSwitchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:isOn="false"
                app:text="@string/noDdayBucketList" />

            <com.zinc.berrybucket.customUi.TextAndSwitchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:isOn="false"
                app:text="@string/ddayPastBucketList" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/divider_bg"
            android:importantForAccessibility="no" />

    </LinearLayout>
</layout>