<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.zinc.berrybucket.model.DetailType" />

        <import type="android.view.View" />

        <variable
            name="detailType"
            type="com.zinc.berrybucket.model.DetailType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/contentLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popupBarrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/popupBarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="myClosePopupLayout, myOpenPopupLayout, otherOpenPopupLayout" />

        <LinearLayout
            android:id="@+id/otherOpenPopupLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/popup_bg"
            android:elevation="4dp"
            android:minWidth="94dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="@{detailType == DetailType.OTHER_OPEN ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/hideTextView"
                style="@style/PopupOptionTextStyle"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/hide" />

            <TextView
                android:id="@+id/reportTextView"
                style="@style/PopupOptionTextStyle"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/report" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myClosePopupLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/popup_bg"
            android:elevation="4dp"
            android:minWidth="94dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="@{detailType == DetailType.MY_CLOSE ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/editTextView"
                style="@style/PopupOptionTextStyle"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/edit" />

            <TextView
                android:id="@+id/deleteTextView"
                style="@style/PopupOptionTextStyle"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/delete" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myOpenPopupLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/popup_bg"
            android:elevation="4dp"
            android:minWidth="94dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="@{detailType == DetailType.MY_OPEN ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/PopupOptionTextStyle"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/edit" />

            <TextView
                style="@style/PopupOptionTextStyle"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/countChange" />

            <TextView
                style="@style/PopupOptionTextStyle"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/delete" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
