<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/commentEditLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <CheckBox
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/feed_like_button"
            android:button="@android:color/transparent"
            android:contentDescription="@string/likeButtonDesc" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/comment_edit_text_bg">

            <EditText
                android:id="@+id/commentEditTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/commentHintText"
                android:importantForAutofill="no"
                android:maxLines="3"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/gray9"
                android:textColorHint="@color/gray6"
                android:textSize="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/commentSendButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/commentSendButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/comment_send_button"
                android:contentDescription="@string/commentSendButtonDesc"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
