<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/proceedingBucketTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="24dp"
                android:text="@string/recommendCategory"
                android:textColor="@color/gray8"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/searchImageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/allSearchImageViewDesc"
                android:src="@drawable/btn_32_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/dividerImageView2"
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_marginEnd="7.5dp"
                android:importantForAccessibility="no"
                android:src="@color/_e0e0e0"
                app:layout_constraintBottom_toBottomOf="@id/searchImageView"
                app:layout_constraintEnd_toStartOf="@id/searchImageView"
                app:layout_constraintTop_toTopOf="@id/searchImageView" />

            <TextView
                android:id="@+id/filterImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="13.5dp"
                android:text="@string/categoryEdit"
                app:layout_constraintEnd_toStartOf="@id/dividerImageView2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/topLayout"
            tools:listitem="@layout/widget_card_text_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
